CIS-91 Add permission check to endpoints in AuthorizationController